<resources>
    <string name="app_name">数拓软件</string>
    
    <string name="welcome_activity_name">Welcome</string>
    <string name="Login_activity_name">Login</string>
    <string name="Register_activity_name">Register</string>
    <string name="Main_activity_name">Main</string>
    <string name="devicelist_activity_name">屏幕列表</string>
    <string name="deviceadd_activity_name">添加屏幕</string>
    <string name="deviceinfo_activity_name">屏幕信息</string>
    
    <string name="account_textview_message">用户名:</string>
    <string name="password_textview_message">密码:</string>
    <string name="password_verify_textview_message">确认密码:</string>
    <string name="login_button_message">登录</string>
    <string name="register_button_message">注册</string>
    
    <string name="remember_account_checkbox_message">记住账户</string>
    <string name="forget_password_textview_message">忘记密码</string>
    
    <string name="company_name">数拓科技股份有限公司</string>
    <string name="software_version">v 1.0.0</string>
    
    <string name="show_logo">Show logo</string>
    
    <string name="main_page_hotseat_one_message">门店设定</string>
    <string name="main_page_hotseat_two_message">示例模板</string>
    <string name="main_page_hotseat_three_message">个人信息</string>
    <string name="main_page_hotseat_four_message">软件设置</string>
    
    <string name="screen_manager_of_store_title">门店屏幕管理</string>

    <string name="store_name">门店名字</string>
    <string-array name="store_list">
        <item>门店一</item>
        <item>门店二</item>
    </string-array>
    <string name="add_store_button">添加门店</string>
    <string name="add_store_title">请输入门店的名字</string>
    
    <string name="OK">确定</string>
    <string name="CANCEL">取消</string>
    
    <string-array name="screen_list">
        <item>1大厅屏组</item>
        <item>2大厅屏组</item>
        <item>3大厅屏组</item>
        <item>4大厅屏组</item>
        <item>5大厅屏组</item>
        <item>6大厅屏组</item>
        <item>7大厅屏组</item>
        <item>8大厅屏组</item>
        <item>9大厅屏组</item>
        <item>1迎宾屏</item>
        <item>1过道屏</item>
    </string-array>
    
    <string-array name="device_list">
        <item>大厅屏组_part1</item>
        <item>大厅屏组_part2</item>
        <item>大厅屏组_part3</item>
        <item>大厅屏组_part4</item>
        <item>大厅屏组_part5</item>
        <item>大厅屏组_part6</item>
        <item>大厅屏组_part7</item>
        <item>大厅屏组_part8</item>
        <item>大厅屏组_part9</item>
        <item>迎宾屏</item>
        <item>过道屏</item>
    </string-array>
    
    <string-array name="settings_list">
        <item>账户管理</item>
        <item>消息设置</item>
        <item>推荐好友</item>
        <item>建议反馈</item>
        <item>免责申明</item>
        <item>当前版本 \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t V1.0.0</item>
        <item>关于我们</item>

    </string-array>
    <string-array name="model_menu">
        <item>行业种类</item>
        <item>主调颜色</item>
        <item>横屏竖屏</item>
    </string-array>

    <!-- 测试数据 -->
    <string-array name="model_test">
        <item>http://image.tianjimedia.com/uploadImages/2016/196/50/4D8S1D3F18LE.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/196/20/3QGYVTI2CN98.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/196/24/T3RCIR2379NV.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/196/39/B803X1H2C25J.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/196/44/GM6H96BBWQF8.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/196/06/0K0D3J3U358V.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/196/11/JI1151E88J61.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/196/49/BSE5Y8OJ09FQ.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/196/29/16I3TY8Z8M5X.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/196/55/H65072W542F3.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/196/00/0LHPGTOUJMS9.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/196/15/916950U9B5V6.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/196/34/3VY6V6BM7O78.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2016/150/55/1B86EY3V3969.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2014/231/05/756OCCRKAIE5.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2014/231/04/Q52AMB9A78EM.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2014/231/06/9O14RKUP4OM9.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2014/231/07/0US60H59X5L5.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2014/231/09/1U9JUXA9E96B.jpg</item>
        <item>http://image.tianjimedia.com/uploadImages/2014/231/10/YO7YN4U3157U.jpg</item>
    </string-array>
</resources>
