<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fashShow="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:text="@string/register_button_message" />

    <EditText
        android:id="@+id/account_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/register_button"
        android:layout_below="@+id/logo_imageview"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/account_edittext"
        android:layout_below="@+id/account_edittext"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/password_two_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password_edittext"
        android:layout_below="@+id/password_edittext"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/account_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/account_edittext"
        android:layout_alignBottom="@+id/account_edittext"
        android:layout_toLeftOf="@+id/account_edittext"
        android:text="@string/account_textview_message" />

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password_edittext"
        android:layout_alignBottom="@+id/password_edittext"
        android:layout_toLeftOf="@+id/password_edittext"
        android:text="@string/password_textview_message" />
    
    <TextView
        android:id="@+id/password_two_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password_two_edittext"
        android:layout_alignBottom="@+id/password_two_edittext"
        android:layout_toLeftOf="@+id/password_two_edittext"
        android:text="@string/password_verify_textview_message" />

</RelativeLayout>